--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,7 @@ button {
 /* < Link */
 
 :root {
+  --color-error: #ee6055;
   --primary-color: #bc6c25;
   --secondary-color: #606c38;
   --bright-color: #fefae0;
