--- a/src/app/_components/Header/Header.module.css
+++ b/src/app/_components/Header/Header.module.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 2rem;
-    max-width: 30rem;
+    max-width: var(--container-max-width);
     margin: auto;
 }
 
@@ -50,7 +50,7 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    max-width: 30rem;
+    max-width: var(--container-max-width);
     margin: auto;
 }
 
