--- a/src/app/_components/PostOverview/PostOverview.module.css
+++ b/src/app/_components/PostOverview/PostOverview.module.css
@@ -1,7 +1,7 @@
 .article {
     display: flex;
     flex-direction: column;
-    max-width: 30rem;
+    max-width: var(--container-max-width);
     padding: 0.8rem;
     background: #dfe2d7;
     border-radius: var(--radius);
