--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,30 @@ button {
   margin: 0;
   padding: 0.5rem;
 }
+
+.btn {
+  border: 0;
+  outline: 0;
+  border-radius: var(--radius);
+  padding: 0.7rem 1.5rem;
+  text-decoration: none;
+  font-size: 14px;
+  transition: all 0.1s;
+}
+
+.btn-primary {
+  background: var(--primary-color);
+  color: var(--bright-color);
+}
+
+.btn-primary:hover {
+  transform: translateY(-3px);
+  box-shadow: var(--color-primary-shade-20) 0 3px 8px;
+}
+
+.btn-primary:focus {
+  background: #96561e;
+}
 /* < Buttons */
 
 /* > Link */
@@ -68,6 +92,7 @@ button {
 
 :root {
   --color-error: #ee6055;
+  --color-primary-shade-20: #714116;
   --container-max-width: 40rem;
   --primary-color: #bc6c25;
   --secondary-color: #606c38;
